Fix alignment of text on JobList
Reviewed at https://reviews.apache.org/r/63260/

--- a/ui/src/main/sass/components/_job-list-page.scss
+++ b/ui/src/main/sass/components/_job-list-page.scss
@@ -22,6 +22,11 @@
 td.job-list-name {
   width: 99%;
 
+  a {
+    display: block;
+    margin-top: -4px;
+  }
+
   .glyphicon {
     font-size: 12px;
     margin-left: 3px;
